objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Sales_Assistant_Added_Date__c</fullName>
        <description>Date Sales Assistant added to record</description>
        <label>Sales Assistant Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Office</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sales_Office__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Office__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scenario_Name__c</fullName>
        <label>Scenario Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Responded Nurture</fullName>
                </value>
                <value>
                    <fullName>Unattended Tour</fullName>
                </value>
                <value>
                    <fullName>Confirmed Appointment</fullName>
                </value>
                <value>
                    <fullName>Missed Appointment</fullName>
                </value>
                <value>
                    <fullName>Site Visited</fullName>
                </value>
                <value>
                    <fullName>Contingent</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Prequalified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Subdivision must belong to the selected sales office and the selected marketing community.</errorMessage>
            <filterItems>
                <field>Subdivision__c.Sales_Office__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sales_Office__c</valueField>
            </filterItems>
            <filterItems>
                <field>Subdivision__c.Marketing_Community__c</field>
                <operation>equals</operation>
                <valueField>$Source.Marketing_Community__c</valueField>
            </filterItems>
            <infoMessage>Select a subdivision</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sync_to_HubSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to HubSpot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Closing_Date__c</fullName>
        <label>Target Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Sale_Amount__c</fullName>
        <label>Total Actual Sale Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Deposit_Due__c</fullName>
        <label>Total Deposit Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Amount__c</fullName>
        <label>Total Discount Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Sale_Amount__c</fullName>
        <formula>Base_Model_Price__c 
+ Lot_Premium__c 
+ Lot_Price__c 
+ Total_Options_Amount__c 
- Total_Discount_Amount__c 
+ Total_Tax_Amount__c 
- Total_Tax_Rebate_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Mortgage_Incentive_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Mortgage Incentive Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Mortgage_Incentive__c</fullName>
        <label>Total Mortgage Incentive</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Options_Amount__c</fullName>
        <label>Total Options Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Proj_Mortg_Incent_Incl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Projected Mortgage Incentive Incl.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Discount_Amount__c</fullName>
        <label>Total Projected Discount Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Mortgage_Incentive__c</fullName>
        <label>Total Projected Mortgage Incentive</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Options_Amount__c</fullName>
        <label>Total Projected Options Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Sale_Amount__c</fullName>
        <label>Total Projected Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Tax_Amount__c</fullName>
        <label>Total Projected Tax Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Tax_Rebate_Amount__c</fullName>
        <label>Total Projected Tax Rebate Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Received_Deposit__c</fullName>
        <label>Total Received Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sale_Amount__c</fullName>
        <description>Presents either an actual deal total set by NEWSTAR or an estimated total computed locally in Salesforce</description>
        <formula>IF( Total_Actual_Sale_Amount__c&gt;0,  Total_Actual_Sale_Amount__c,  Total_Estimated_Sale_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Scheduled_Deposit__c</fullName>
        <label>Total Scheduled Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Amount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Rebate_Amount__c</fullName>
        <label>Total Tax Rebate Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transferring_to_area_date__c</fullName>
        <inlineHelpText>If lead is transferring to the area, enter date they expect to transfer.</inlineHelpText>
        <label>Transferring to area date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Date of First Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_Form__c</fullName>
        <label>Web Form</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Cancelled_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>All Cancelled Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Total_Sale_Amount__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Subdivision__c</columns>
        <columns>Model__c</columns>
        <columns>Lot__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Cancelled_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>My Cancelled Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Marketing_Community__c</columns>
        <columns>Subdivision__c</columns>
        <columns>Lot__c</columns>
        <columns>Model__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Subdivision__c</columns>
        <columns>Lot__c</columns>
        <columns>Model__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Direct_offer</fullName>
        <active>true</active>
        <businessProcess>Direct to contract sale</businessProcess>
        <label>Direct offer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lot_reservation</fullName>
        <active>true</active>
        <businessProcess>Sale with lot reservation</businessProcess>
        <label>Lot reservation</label>
    </recordTypes>
    <validationRules>
        <fullName>Enforce_presited_model</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISCHANGED(Model__c)
||
ISCHANGED(Lot__c)
)
&amp;&amp;
Lot__c!=null
&amp;&amp;
(TEXT(Lot__r.Type__c)=='Regular')
&amp;&amp;
Lot__r.Assigned_Model__c!=null
&amp;&amp;
Model__c!=Lot__r.Assigned_Model__c</errorConditionFormula>
        <errorMessage>The selected lot is a Regular lot with a pre-sited model assigned. The model selected for the Opportunity should match the model pre-sited for the lot.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_spec_model</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISCHANGED(Model__c)
||
ISCHANGED(Lot__c)
)
&amp;&amp;
Lot__c!=null
&amp;&amp;
(TEXT(Lot__r.Type__c)='Spec' || TEXT(Lot__r.Type__c)='Model')
&amp;&amp;
Model__c!=Lot__r.Assigned_Model__c</errorConditionFormula>
        <errorMessage>The selected lot is of type Spec or Model. The model selected for the Opportunity should match the model assigned to the Spec lot.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Different_Sales_Office_Agents</fullName>
        <active>true</active>
        <errorConditionFormula>Sales_Agent_Sales_Office_Relationship__c!=null
&amp;&amp;
Sales_Agent_Sales_Office_Relationship_2__c !=null
&amp;&amp;
Sales_Agent_Sales_Office_Relationship__c==Sales_Agent_Sales_Office_Relationship_2__c</errorConditionFormula>
        <errorMessage>Sales Office Agent and Sales Office Agent 2 cannot be set to the same agent. Please select different agents.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_changes_when_reserved</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISCHANGED(Model__c) 
|| ISCHANGED(Lot__c) 
|| ISCHANGED(Sales_Office__c) 
|| ISCHANGED(Subdivision__c)
|| ISCHANGED(Sales_Agent_Sales_Office_Relationship__c)
|| ISCHANGED(Sales_Agent_Sales_Office_Relationship_2__c)
|| ISCHANGED(Real_Estate_Agent__c)
) 

&amp;&amp; 

(
TEXT(StageName)='Lot Reservation' 
|| TEXT(StageName)='Contract Ready'
|| TEXT(StageName)='Pending Offer' 
|| TEXT(StageName)='Under Contract' 
|| TEXT(StageName)='Closed'
|| TEXT(StageName)='Quote Closed'
)</errorConditionFormula>
        <errorMessage>Model, lot, subdivision, sales office, sales agent and real estate agent cannot be changed when the lot is reserved or under contract.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_No_show_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c , "Missed Appointment") &amp;&amp; 
ISBLANK( Appt_No_Show_Cancel_Reason__c )</errorConditionFormula>
        <errorMessage>Please enter the Appt No Show/Cancel Reason when the status is Missed Appointment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(Visit_Date__c) , OR(Visit_Date__c &gt; TODAY(), Visit_Date__c&lt;(TODAY() + if(WEEKDAY(TODAY())=1,(2-WEEKDAY(TODAY()-WEEKDAY(TODAY()))-1),2-WEEKDAY(TODAY())))))</errorConditionFormula>
        <errorDisplayField>Visit_Date__c</errorDisplayField>
        <errorMessage>Selected date cannot be in the future or from last week</errorMessage>
    </validationRules>
</CustomObject>